2005-01-18  Mark McLoughlin  <mark@skynet.ie>

	Fixes problem where a path file which only includes
	another path file wouldn't work.

	* gconf/gconf-internals.c: (gconf_load_source_path):
	assign the return value of g_slist_concat() to something.

2005-01-17  Mark McLoughlin  <mark@skynet.ie>

	Fix double free with gconf_client_clear_cache()

	* gconf/gconf-client.c: (clear_cache_foreach): don't
	free the key explicitly - the key is owned by the
	GConfEntry.

Tue Nov 16 12:24:26 2004  Jonathan Blandford  <jrb@redhat.com>

	* doc/gconf/gconf-docs.sgml: add a title/name instead of [Insert
	name here]

2004-11-02  Fernando Herrera  <fherrera@onirica.com>

	* backends/markup-tree.c: (markup_entry_get_value): Read the schema 
	file until a matching locale is found and the C one. This solves 
	bug #152175 when current locale is before the C.

2004-11-02  Fernando Herrera  <fherrera@onirica.com>

	* gconf/gconf-sources.c: (gconf_sources_all_entries): Get schema_name
	also if we got a value from a previous source. Fix #131011

2004-10-12  Mark McLoughlin  <mark@skynet.ie>

	* configure.in: post-release bump to 2.8.2.

==================== 2.8.1 ====================

2004-10-12  Mark McLoughlin  <mark@skynet.ie>

	* configure.in: Version 2.8.1.

2004-10-04  Mark McLoughlin  <mark@skynet.ie>

	GConf part of fix for gconf-editor spewing warnings
	on startup. See bug #144833.

	* backends/markup-backend.c: (resolve_address): if the
	toplevel directory isn't writable, mark the whole source
	as non-writable.

2004-09-30  Kjartan Maraas  <kmaraas@gnome.org>

	* gconf/gconf-internals.c: (gconf_activate_server):
	Fix pipe misuse reported by valgrind. Suggested fix
	by Mark McLoughlin. Closes bug #153929.

2004-09-28  Kjartan Maraas  <kmaraas@gnome.org>

	* gconf/gconf-sanity-check.c: (main): Plug a leak.
	* gconf/gconfd.c: (main): Plug a couple of leaks.
	Ref bug #153929. Still one to go.

2004-09-28  Mark McLoughlin  <mark@skynet.ie>

	Leak identified by Kjartan in bug #153891.
